--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:aULlQ8lyE5EUt7z57m2mkhTJQTuGp030FNeXyXt5hFo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laracamp
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -57,3 +57,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=326403752471-ja1to9rlsnk3ugrqlmkcl9cqupro7i1q.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+# GOOGLE_CLIENT_REDIRECT=https://localhost:8000/auth/google/callback
+GOOGLE_CLIENT_REDIRECT=https://laracamp.dev/auth/google/callback
