update oauth google and signout

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:aULlQ8lyE5EUt7z57m2mkhTJQTuGp030FNeXyXt5hFo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -60,5 +60,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GOOGLE_CLIENT_ID=326403752471-ja1to9rlsnk3ugrqlmkcl9cqupro7i1q.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-# GOOGLE_CLIENT_REDIRECT=https://localhost:8000/auth/google/callback
-GOOGLE_CLIENT_REDIRECT=https://laracamp.dev/auth/google/callback
+GOOGLE_CLIENT_REDIRECT=https://localhost:8000/auth/google/callback
+# GOOGLE_CLIENT_REDIRECT=https://laracamp.dev/auth/google/callback
